[workspace]
members = ["crates/*"]
resolver = "2"
[workspace.package]
version = "0.3.1"
edition = "2021"
authors = ["bmbp<rs_bmbp.163.com>"]
description = "BMBP RDBC"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/bmbper/bmbp_rdbc"
repository = "https://github.com/bmbper/bmbp_rdbc"
documentation = "https://github.com/bmbper/bmbp_rdbc"
[workspace.build]
openssl = "/opt/homebrew/Cellar/openssl@3/3.3.0"
[workspace.dependencies]
bmbp_rdbc_adaptor = { version = "0.3.0", path = "crates/bmbp_rdbc_adaptor" }
bmbp_rdbc_marco = { version = "0.3.0", path = "crates/bmbp_rdbc_marco" }
bmbp_rdbc_orm = { version = "0.3.0", path = "crates/bmbp_rdbc_orm" }
bmbp_rdbc_script = { version = "0.3.0", path = "crates/bmbp_rdbc_script" }
bmbp_rdbc_sql = { version = "0.3.0", path = "crates/bmbp_rdbc_sql" }
bmbp_rdbc_type = { version = "0.3.2", path = "crates/bmbp_rdbc_type" }
bmbp_rdbc_driver = { version = "0.3.0", path = "crates/bmbp_rdbc_driver" }
async_static = "0.1.3"
async-trait = "0.1.81"
case_style = "0.2.1"
log = "0.4.22"
once_cell = "1.19.0"
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.215", features = ["derive", ] }
serde_json = { version = "1.0.132", features = ["default"] }
serde_repr = "0.1.19"
syn = { version = "2.0.72", features = [
    "full",
    "parsing",
    "printing",
    "proc-macro",
    "clone-impls",
] }
tokio = { version = "1.38.0", features = ["full"] }
tokio-postgres = { version = "0.7.12", features = ["with-chrono-0_4"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
quote = "1.0.36"
uuid = { version = "1.1.3", features = ["serde", "v4"] }
bytes="1.1.0"