[package]
name = "bmbp_rdbc_sql"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "SQL构建器"
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_repr = { workspace = true }
chrono = { workspace = true }
tokio-postgres = { workspace = true }
uuid = { workspace = true }
