[package]
name = "bmbp_rdbc_type"
version = "0.3.2"
edition.workspace = true
authors.workspace = true
description = "定义rdbc模型"
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio-postgres = { workspace = true }
chrono = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true }
